--- a/views/index.erb
+++ b/views/index.erb
@@ -2,21 +2,87 @@
 <!doctype html>
 <html>
 <head>
+  <link rel="stylesheet" type="text/css" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
+  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+  <script type="text/javascript">
+    var HOST = "ws://localhost:3001";
+    var socket;
+
+    function connect() {
+      try {
+        socket = new WebSocket(HOST);
+
+        addMessage("Socket State: " + socket.readyState);
+
+        socket.onopen = function() {
+          addMessage("Socket Status: " + socket.readyState + " (open)");
+        }
+
+        socket.onclose = function() {
+          addMessage("Socket Status: " + socket.readyState + " (closed)");
+        }
+
+        socket.onmessage = function(msg) {
+          addMessage("Received: " + msg.data);
+        }
+      } catch(exception) {
+        addMessage("Error: " + exception);
+      }
+    }
+
+    function send() {
+      var text = $("#message").val();
+      if (text == '') {
+        addMessage("Please Enter a Message");
+        return;
+      }
+
+      try {
+        socket.send(text);
+        addMessage("Sent: " + text)
+      } catch(exception) {
+        addMessage("Failed To Send")
+      }
+
+      $("#message").val('');
+    }
+
+    function addMessage(msg) {
+      $("#chat-log").append("<div>" + msg + "</div>");
+    }
+
+    $(function() {
+      connect();
+
+      $('#message').keypress(function(event) {
+        if (event.keyCode == '13') { send(); }
+      });
+
+      $("#disconnect").click(function() {
+        socket.close()
+      });
+    });
+
+  </script>
 </head>
+
 <body>
+  <div class="container">
+    <h1>
+      WebSocket Chat App
+    </h1>
+    <p>
+      <input type="text" id="message">
+    </p>
 
-  # WebSockets Chat App
-  <div id="chat-log">
-
-    <input type="text" id="message">
     <button id="disconnect">Disconnect</button>
 
-
-
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-    <script>
-      // where our WebSockets logic will go later
-    </script>
-  </body>
-  </html>
+    <br>
+    <br>
+    <div id="chat-log" class="well">
+      <!-- Here go the messages -->
+    </div>
+  </div>
+</body>
+</html>
 
